# obsidian-review-notes

./: .gitignore  noxfile.py  pyproject.toml
src/obsidian-review-notes/: main.py
src/obsidian_review_notes/: commit_reader.py  commit_tracker.py  main.py  vault.py  weeks.py
src/obsidian_review_notes/templates/: review.md
